Added CircuitBreaker Design Pattern

--- a/microservice1/src/main/resources/application.properties
+++ b/microservice1/src/main/resources/application.properties
@@ -8,3 +8,12 @@ eureka.client.fetch-registry:true
 #eureka.client.service-url.defaultZone:http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone:http://ec2-51-20-128-193.eu-north-1.compute.amazonaws.com:8080/eureka/
 eureka.client.instance.hostname:ec2-51-20-128-193.eu-north-1.compute.amazonaws.com
+
+#Resilience4j Configuration
+resilience4j.circuitbreaker.instances.product.allowHealthIndicatorToFail:false
+resilience4j.circuitbreaker.instances.product.registerHealthIndicator:true
+resilience4j.circuitbreaker.instances.product.slidingWindowType:COUNT_BASED
+resilience4j.circuitbreaker.instances.product.slidingWindowSize:5
+resilience4j.circuitbreaker.instances.product.waitDurationInOpenState:15000
+resilience4j.circuitbreaker.instances.product.permittedNumberOfCallsInHalfOpenState:3
+resilience4j.circuitbreaker.instances.product.automaticTransitionFromOpenToHalfOpenEnabled:true
